# 2DGE

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake_modules/: FindOpenAL.cmake
game/config/: cave1.yaml  game.yaml  player.yaml  procedural_genration.yaml
platformer/config/: cave2.yaml  collectable.yaml  game.yaml  player.yaml
res/tilemaps/: map1.tmx  map2.tmx  map3.tmx  platformer.tmx
res/tilesets/: DungeonTileset.tsx  DungeonTilesetWalls.tsx  caves.tsx  dungeon.tsx  forest.tsx  overworld.tsx  patformkenney-64-4x39.tsx  platformer_tiles.tsx  pltf_tileset.tsx
res/txrs/: 3156603.eps
src/: Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  Main.cpp  SFMLOrthogonalLayer.hpp
src/Audio/: SoundPlayer.cpp  SoundPlayer.hpp
src/GUI/: Button.cpp  Button.hpp  ProgressBar.cpp  ProgressBar.hpp  StackMenu.cpp  StackMenu.hpp  Textbox.cpp  Textbox.hpp  Widget.cpp  Widget.hpp
src/GameLogic/: GameObject.cpp  GameObject.hpp
src/Graphics/: OrthoLayer.hpp  Tile.cpp  Tile.hpp  TileArray.cpp  TileArray.hpp
src/Messaging/: Message.cpp  Message.hpp  MessageBus.cpp  MessageBus.hpp  Messager.cpp  Messager.hpp  System.cpp  System.hpp
src/PCG/: ProceduralGenerator.cpp  ProceduralGenerator.hpp
src/ResourceManager/: ResourceHolder.cpp  ResourceHolder.hpp  TilesetManager.cpp  TilesetManager.hpp
src/States/: MenuState.cpp  MenuState.hpp  PCGState.cpp  PCGState.hpp  PlayingState.cpp  PlayingState.hpp  SplashState.cpp  SplashState.hpp  State.hpp  StateMachine  StateMachine.cpp  StateMachine.hpp  StatePlaying.cpp  StatePlaying.h  stateHandler.hpp
src/Util/: Animation.cpp  FPSCounter.cpp  FileUtil.cpp  (+1 more)
(+2 files in other folders)
